terraform/main.tf
provider "aws" {
  region = "eu-north-1"
}

data "aws_ami" "amazon_linux" {
  most_recent = true
  owners      = ["137112412989"]

  filter {
    name   = "name"
    values = ["al2023-ami-*-x86_64"]
  }
}

resource "aws_security_group" "petclinic_sg" {
  name        = "petclinic-sg"
  description = "Security group for PetClinic EC2 instance"

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Application Port"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "petclinic-sg"
  }
}

resource "aws_instance" "petclinic_ec2" {
  ami                    = data.aws_ami.amazon_linux.id
  instance_type          = "t3.micro"
  key_name               = "petclinic-key"
  vpc_security_group_ids = [aws_security_group.petclinic_sg.id]

  root_block_device {
    volume_size = 20
    volume_type = "gp3"
  }

  tags = {
    Name = "petclinic-ec2"
  }

  lifecycle {
    ignore_changes = [ami]
  }
}

output "ec2_public_ip" {
  value = aws_eip.petclinic_eip.public_ip
}

resource "aws_eip" "petclinic_eip" {
  instance = aws_instance.petclinic_ec2.id
  domain   = "vpc"

  tags = {
    Name = "petclinic-eip"
  }
}
